--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "14.0.4",
+    "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.4"
+    "spotify-web-api-node": "^5.0.2",
+    "swr": "^2.2.4"
   },
   "devDependencies": {
     "eslint": "^8",
