--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react": "^18",
     "react-dom": "^18",
     "spotify-web-api-node": "^5.0.2",
-    "swr": "^2.2.4"
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "eslint": "^8",
