--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^18",
     "react-dom": "^18",
     "spotify-web-api-node": "^5.0.2",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "use-local-storage-state": "^19.1.0"
   },
   "devDependencies": {
     "eslint": "^8",
