--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^18",
     "spotify-web-api-node": "^5.0.2",
     "styled-components": "^6.1.8",
-    "use-local-storage-state": "^19.1.0"
+    "use-local-storage-state": "^19.1.0",
+    "use-session-storage-state": "^18.2.0"
   },
   "devDependencies": {
     "eslint": "^8",
