--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^11.0.8",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "react": "^18",
