--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "spotify-web-api-node": "^5.0.2",
     "styled-components": "^6.1.8",
     "use-local-storage-state": "^19.1.0",
-    "use-session-storage-state": "^18.2.0"
+    "use-session-storage-state": "^18.2.0",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "eslint": "^8",
